:bug: fix content not centered on template default

--- a/inte/scss/layout/_mediaqueries.scss
+++ b/inte/scss/layout/_mediaqueries.scss
@@ -155,6 +155,9 @@
     .container-small{
         padding: 0;
         margin: 0;
+        .grid{
+            margin: 0;
+        }
     }
 
     .portfolio-list{
