--- a/wp/wp-content/themes/alven/css/main.css
+++ b/wp/wp-content/themes/alven/css/main.css
@@ -4678,6 +4678,9 @@ select::-ms-expand {
     padding: 0;
     margin: 0;
   }
+  .container-small .grid {
+    margin: 0;
+  }
 
   .portfolio-list .hover {
     bottom: 10px;
